welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:20: error: unclosed comment
/* 1 2 3 4 5 6 7 8 9 10 11 12 13
^golomb:20: error: unclosed comment
/* 1 2 3 4 5 6 7 8 9 10 11 12 13
^golomb:20: error: unclosed comment
/* 1 2 3 4 5 6 7 8 9 10 11 12 13
^golomb:20: error: unclosed comment
/* 1 2 3 4 5 6 7 8 9 10 11 12 13
^golomb:-6: error: Missing closing brace `}' assumed here
try {
^golomb:1: error: expected class or object definition
def golomb(num:Int): Int = {
^golomb:20: error: unclosed comment
/* 1 2 3 4 5 6 7 8 9 10 11 12 13
^